--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,18 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# custom file extentions
+*.onnx
+*.json
+*.pt
+*.so
+*.params
+*.tar
+*.txt
+*.pyc
+*.png
+*.pth
+*.yaml
+*.snapshot
+*.o
